Add chapter 9 examples