@@ -1,16 +1,16 @@
 import io.reactivex.Observable;
-import io.reactivex.rxjavafx.observables.JavaFxObservable;
+import io.reactivex.rxjavafx.observers.JavaFxObserver;
 import io.reactivex.rxjavafx.schedulers.JavaFxScheduler;
 import javafx.application.Application;
+import javafx.beans.binding.Binding;
 import javafx.scene.Scene;
 import javafx.scene.control.Label;
-import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.Pane;
 import javafx.stage.Stage;
 
 import java.util.concurrent.TimeUnit;
 
-public final class Ch7_17 extends Application {
+public final class Ch9_6 extends Application {
     /*
       Before running this application, make sure to do these two steps:
 
@@ -22,6 +22,7 @@ public final class Ch7_17 extends Application {
 
         --module-path /path/JavaFX/lib
         --add-modules=javafx.controls,javafx.fxml
+        --add-exports javafx.base/com.sun.javafx.binding=ALL-UNNAMED
 
       If you run it from IDE, add these VM options to Run Configuration.
     */
@@ -31,33 +32,27 @@ public final class Ch7_17 extends Application {
 
     @Override
     public void start(Stage stage) {
-
         Pane root = new Pane();
-        Label typedTextLabel = new Label("");
-        typedTextLabel.relocate(20, 30);
-        root.getChildren().addAll(typedTextLabel);
+        Label label = new Label("0");
+        label.setScaleX(2.00);
+        label.setScaleY(2.00);
+        label.relocate(40, 40);
+        root.getChildren().addAll(label);
 
         Scene scene = new Scene(root, 100, 100);
         stage.setScene(scene);
         stage.show();
 
-        setObservers(scene, typedTextLabel);
+        setBinding(label);
     }
 
-    private void setObservers(Scene scene, Label label){
-        Observable<String> typedLetters =
-                JavaFxObservable.eventsOf(scene, KeyEvent.KEY_TYPED)
-                                .map(KeyEvent::getCharacter);
-
-        // Signal 1 sec of inactivity
-        typedLetters.throttleWithTimeout(1000, TimeUnit.MILLISECONDS)
-                    .startWith("") //trigger initial
-                    .switchMap(s -> typedLetters.scan("", (rolling, next) -> rolling + next))
+    private static void setBinding(Label label){
+        Binding<String> binding =
+          Observable.interval(1, TimeUnit.SECONDS)
+                    .map(i -> i.toString())
                     .observeOn(JavaFxScheduler.platform())
-                    .subscribe(s -> {
-                        label.setText(s);
-                        System.out.println(s);
-                    });
-    }
+                    .to(JavaFxObserver::toBinding);
 
+        label.textProperty().bind(binding);
+    }
 }
